Solve the problem
23 / 23 test cases passed.
Status: Accepted
Runtime: 0 ms
Memory Usage: 36.8 MB