@@ -2,16 +2,14 @@ package io.lcalmsky.leetcode.spiral_matrix;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class SpiralMatrixTests {
-
+class SolutionTest {
     @Test
-    public void givenMatrix_whenMakeListInSpiralOrder_thenCorrect() {
+    void givenMatrix_whenMakeListInSpiralOrder_thenCorrect() {
         assertAll(
                 () -> test(
                         new int[][]{
@@ -19,22 +17,21 @@ public class SpiralMatrixTests {
                                 {4, 5, 6},
                                 {7, 8, 9}
                         },
-                        Arrays.asList(1, 2, 3, 6, 9, 8, 7, 4, 5)
-                ),
+                        List.of(1, 2, 3, 6, 9, 8, 7, 4, 5)),
                 () -> test(
                         new int[][]{
                                 {1, 2, 3, 4},
                                 {5, 6, 7, 8},
                                 {9, 10, 11, 12}
                         },
-                        Arrays.asList(1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7))
+                        List.of(1, 2, 3, 4, 8, 12, 11, 10, 9, 5, 6, 7))
         );
     }
 
     private void test(int[][] given, List<Integer> expected) {
         // when
-        Solution spiralMatrix = new Solution();
-        List<Integer> actual = spiralMatrix.spiralOrder(given);
+        Solution solution = new Solution();
+        List<Integer> actual = solution.spiralOrder(given);
 
         // then
         assertEquals(expected, actual);
